# tools

./: .bwrap-cwd  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.org  deps.dot  pyproject.toml
docs/: bash.md  python.md  time-entry.md
scripts/: bee  bwrap-cwd  claude-context-settings  down  install-hooks  kfz  kitty-agent-title
src/claude_status/: __init__.py  __main__.py  colors.py  config.py  env_counts.py  git_status.py  render.py  stdin.py  transcript.py
src/tools/: __init__.py  bds.py  bundled_summaries.json  clones.py  cmake.py  cmake_config.py  cmake_examine.py  dot.py  manycron.py  time-entry.py  time_entry.py
