[project]
name = "tools"
version = "0.1.0"
description = "A collection of CLI tools"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "tomlkit>=0.12",
    "click-man>=0.4",
]

[project.scripts]
tools = "tools:main"
clones = "tools.clones:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
