[project]
name = "tools"
version = "0.1.0"
description = "A collection of CLI tools"
readme = {file = "README.org", content-type = "text/org"}
license = {file = "LICENSE"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "tomlkit>=0.12",
    "click-man>=0.4",
    "playwright",
]

[project.scripts]
tools = "tools:main"
clones = "tools.clones:cli"
manycron = "tools.manycron:cli"
time-entry = "tools.time_entry:main"
claude-status = "claude_status:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = ["scripts/kfz", "scripts/claude-context-settings", "scripts/down", "scripts/bee"]

[tool.setuptools.packages.find]
where = ["src"]
